[package]
name = "fixed-filters"
version = "0.1.0"
edition = "2021"
authors = ["donny zimmanck <dzimmanck@enphaseenergy.com"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "2.0.0-alpha.12"
heapless = {git = "https://github.com/rust-embedded/heapless.git", rev = "a33989f25590faccef60df8eb48defff67c2179d" }
micromath = "2.1.0"

[dev-dependencies]
approx = "0.5.1"
