[package]
name = "fixed-filters"
version = "0.1.0"
edition = "2021"
authors = ["donny zimmanck <dzimmanck@enphaseenergy.com"]
license = "Apache-2.0"
categories = ["no-std"]
description = "fixed-point digital filters"
keywords = ["biquad", "filter"]
repository = "https://github.com/enphase/fixed-filters"

[dependencies]
fixed = "2.0.0-alpha.12"
micromath = "2.1.0"

[dev-dependencies]
approx = "0.5.1"
